feat(server): add user document update feature     - user document update feature added     - api docs regenerated     - fix middleware issue     - add fields & removed unecessary checks at User model     - add user routes
